fixed small issue with z-index in header and lightbox

--- a/one-commercial/src/components/main.sass
+++ b/one-commercial/src/components/main.sass
@@ -31,7 +31,7 @@
   box-shadow: 0 4px 2px -2px $light-grey
   position: sticky
   top: 0
-  z-index: 9999
+  z-index: 999
   @include edgesnap
     --height: 120px
   @include tablet 
